fixed header alignment

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -298,7 +298,7 @@ p {
 .auto-container {
   position: static;
   max-width: 1200px;
-  padding: 0px 15px;
+  padding: 3px 15px;
   margin: 0 auto;
 }
 
@@ -679,6 +679,7 @@ img {
 .main-header .header-upper .logo-box .logo {
   position: relative;
   display: block;
+  top: 7px;
 }
 
 .main-header .header-upper .logo-box .logo img {
@@ -693,12 +694,14 @@ img {
   position: relative;
   float: right;
   z-index: 7;
+  top: 5px;
+
 }
 
 .main-header .other-links .link-box {
   position: relative;
   float: left;
-  padding: 10px 0px;
+  padding: 15px 0px;
 }
 
 .main-header .other-links .link-box .link {
@@ -709,6 +712,10 @@ img {
   letter-spacing: 0.05em;
   padding-left: 60px;
   color: #ffffff;
+}
+
+.fixed-header .other-links{
+  top: 0;
 }
 
 .header-style-two.fixed-header .other-links .link-box .link {
@@ -820,8 +827,8 @@ img {
 .main-menu .navigation > li {
   position: relative;
   float: left;
-  padding: 10px 0px 0;
-  margin-left: 40px;
+  padding: 0px 0px 0;
+  margin-left:40px;
   -webkit-transition: all 300ms ease;
   transition: all 300ms ease;
 }
@@ -854,6 +861,7 @@ img {
   font-family: Raleway-medium;
 }
 
+
 .main-menu .navigation a {
   color: #000000;
   font-family: Raleway-medium;
@@ -861,7 +869,7 @@ img {
 }
 
 .main-menu .navigation a:hover {
-  color: #1fa393 !important;
+  color: #1c8554 !important;
 }
 
 .main-menu .navigation li > a {
@@ -898,7 +906,7 @@ img {
 
 .main-menu .navigation > li:hover > a,
 .main-menu .navigation > li.current > a {
-  color: #000;
+  color: #1c8554;
 }
 
 .header-style-two .main-menu .navigation > li > a,
@@ -919,14 +927,21 @@ img {
 .main-menu .navigation > li > a:before {
   content: "";
   position: absolute;
-  left: 0;
-  bottom: 7px;
-  width: 100%;
-  border-bottom: 2px solid #1fa393;
+  left: 0px;
+  bottom: -16px;
+  width:100%;
+  border-bottom: 5px solid #1c8554;
   -webkit-transform: scaleX(0);
   transform: scaleX(0);
   -webkit-transition: all 500ms ease;
   transition: all 500ms ease;
+  border-top-right-radius:20px;
+  border-top-left-radius:20px
+}
+
+.fixed-header .main-menu .navigation > li > a:before{
+  bottom: -19px;
+
 }
 
 .header-style-two .main-menu .navigation > li > a:before {
@@ -2276,6 +2291,9 @@ tns-controls-tools {
   .banner-one-page .banner-carousel .content-box h1 {
     font-size: 150px;
   }
+  .new-container-style{
+    align-items: center;
+  }
 }
 
 .banner-one-page .banner-carousel .content-box .link-box {
@@ -2478,6 +2496,7 @@ tns-controls-tools {
   position: relative;
   z-index: 22;
 }
+
 
 .banner-section-four h2 {
   margin: 0;
@@ -11317,7 +11336,7 @@ featured-section .right-col .sec-title h2 {
   font-style: normal;
   font-weight: 700;
   line-height: 20px;
-  padding: 10px 30px;
+  padding: 7px 30px;
   letter-spacing: 0.12px;
 }
 
@@ -19069,6 +19088,7 @@ h6.designation {
   position: absolute;
   margin: 20px 10px 0 5px;
   transition: all 300ms ease;
+  transform: rotate(270deg);
 }
 .blog-menu .navigation > li:nth-child(4)::before {
   content: "\f107";
@@ -19085,6 +19105,8 @@ h6.designation {
   position: absolute;
   margin: 20px 10px 0 5px;
   transition: all 300ms ease;
+  transform: rotate(270deg);
+
 }
 .main-menu .navigation > li:hover::before {
   transform: rotate(-180deg);
